# hylight-powerlines

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  strategy.md
data/: defect_mapping.yaml  detection_mapping.yaml
notebooks/: analysis.ipynb
outputs/llm_pipeline/IMG00001/: IMG00001.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00002/: IMG00002.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00003/: IMG00003.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00004/: IMG00004.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00005/: IMG00005.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00006/: IMG00006.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00007/: IMG00007.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00008/: IMG00008.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00009/: IMG00009.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00010/: IMG00010.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00011/: IMG00011.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00012/: IMG00012.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00013/: IMG00013.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00014/: IMG00014.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00015/: IMG00015.txt  final.json  preanalysis.json
outputs/llm_pipeline/IMG00016/: IMG00016.txt  final.json  preanalysis.json
outputs/sahi_gdino/IMG00001/: IMG00001.txt  final.json
outputs/sahi_gdino/IMG00002/: IMG00002.txt  final.json
outputs/sahi_gdino/IMG00003/: final.json
outputs/sahi_gdino/IMG00004/: IMG00004.txt  final.json
outputs/sahi_gdino/IMG00005/: IMG00005.txt  final.json
outputs/sahi_gdino/IMG00006/: IMG00006.txt  final.json
runs/powerlines/yolov8s-6cls/: args.yaml  results.csv
scripts/: build_defects_dataset.py  build_detection_dataset.py  curate_detection_dataset.py  download_all_training_datasets.py  download_test_data.py  fine_tune_defects_detection.py  fine_tune_parts_detection.py  llm_detection_pipeline.py  run_parts_detection_network.py  sahi_gdino_pipeline.py
src/hylight_powerlines/: __init__.py  curate.py  datasets.py  merge.py  roboflow.py  yolo.py
src/hylight_powerlines/datasets/: __init__.py  merge.py  roboflow.py
src/hylight_powerlines/detectors/: __init__.py  gdino_hf.py  sam2.py  vlm_litellm.py
src/hylight_powerlines/llm/: __init__.py  gdino.py  geometry.py  image.py  models.py  pipeline.py  sam2.py  steps.py  vis.py  vlm.py  yolo_export.py
src/hylight_powerlines/pipelines/: __init__.py  sahi_gdino.py  steps.py  vlm_gdino.py
src/hylight_powerlines/preprocessing/: __init__.py  tiling_sahi.py
src/hylight_powerlines/vision/: __init__.py  export_yolo.py  geometry.py  image.py  labels.py  types.py  vis.py
src/hylight_powerlines/yolo/: __init__.py
tests/: test_curate.py  test_llm_backends.py  test_llm_core.py  test_llm_steps_and_run.py  test_merge.py  test_preprocessing_tiling_sahi.py  test_roboflow.py  test_sahi_gdino.py  test_yolo_wrappers.py
